// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination.vue renders correctly 1`] = `
<div class="pagination-container">
  <div class="pagination-container__pages">
    <div class="pagination-container__button"><svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg" class="pagination-container__button__image">
        <path d="M2.80077e-07 4.26316L6 0L6 9L2.80077e-07 4.26316Z" fill="#354049" class="pagination-svg-path"></path>
      </svg></div>
    <div class="pagination-container__items">
      <pagesblock-stub pages="" isselected="function () { [native code] }"></pagesblock-stub>
      <!---->
      <pagesblock-stub pages="" isselected="function () { [native code] }"></pagesblock-stub>
      <!---->
      <pagesblock-stub pages="" isselected="function () { [native code] }"></pagesblock-stub>
    </div>
    <div class="pagination-container__button"><svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg" class="pagination-container__button__image">
        <path d="M6 4.73684L0 9L1.20219e-06 -9.53674e-07L6 4.73684Z" fill="#354049" class="pagination-svg-path"></path>
      </svg></div>
  </div>
</div>
`;

exports[`Pagination.vue renders correctly with props 1`] = `
<div class="pagination-container">
  <div class="pagination-container__pages">
    <div class="pagination-container__button"><svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg" class="pagination-container__button__image">
        <path d="M2.80077e-07 4.26316L6 0L6 9L2.80077e-07 4.26316Z" fill="#354049" class="pagination-svg-path"></path>
      </svg></div>
    <div class="pagination-container__items">
      <pagesblock-stub pages="[object Object],[object Object],[object Object]" isselected="function () { [native code] }"></pagesblock-stub> <span class="pages-divider">...</span>
      <pagesblock-stub pages="" isselected="function () { [native code] }"></pagesblock-stub>
      <!---->
      <pagesblock-stub pages="[object Object]" isselected="function () { [native code] }"></pagesblock-stub>
    </div>
    <div class="pagination-container__button"><svg width="6" height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg" class="pagination-container__button__image">
        <path d="M6 4.73684L0 9L1.20219e-06 -9.53674e-07L6 4.73684Z" fill="#354049" class="pagination-svg-path"></path>
      </svg></div>
  </div>
</div>
`;
